--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,5 +1,6 @@
 name: elytraflight
-version: '1.1'
+version: '1.1.1'
 main: red.jad.elytraflight.ElytraFlight
 api-version: '1.21'
 authors: [ jadc ]
+folia-supported: true
