--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,19 +1,51 @@
-name: Build
+name: Publish
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    runs-on: ubuntu-20.04
+
     steps:
-      - uses: Kir-Antipov/mc-publish@v3.3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/checkout@v2.4.2
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: 21
+        distribution: temurin
+        cache: gradle
+          
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+          
+    - name: Build artifacts
+      run: ./gradlew build
+
+    - name: Set outputs
+      id: vars
+      run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
+    - uses: avakar/tag-and-release@v1
+      id: release
+      with:
+        tag_name: ${{ steps.vars.outputs.sha_short }}
+        draft: true
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+
+    - name: Clean useless artifacts
+      run: |
+        rm -f \
+          build/libs/*-dev.jar \
+          build/libs/*-dev-all.jar
+        
+    - name: Upload artifacts & release assets
+      uses: nanoufo/action-upload-artifacts-and-release-assets@v1.4
+      with:
+        path: build/libs/AntiPopup-*.jar
+        release-upload-url: ${{ steps.release.outputs.upload_url }}
+        upload-release-files: true
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
