--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
-
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v2.4.2
     - name: Set up JDK 21
@@ -22,30 +23,7 @@ jobs:
           
     - name: Build artifacts
       run: ./gradlew build
-
-    - name: Set outputs
-      id: vars
-      run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-
-    - uses: avakar/tag-and-release@v1
-      id: release
+      
+    - uses: Kir-Antipov/mc-publish@v3.3
       with:
-        tag_name: ${{ steps.vars.outputs.sha_short }}
-        draft: true
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-
-    - name: Clean useless artifacts
-      run: |
-        rm -f \
-          build/libs/*-dev.jar \
-          build/libs/*-dev-all.jar
-        
-    - name: Upload artifacts & release assets
-      uses: nanoufo/action-upload-artifacts-and-release-assets@v1.4
-      with:
-        path: build/libs/AntiPopup-*.jar
-        release-upload-url: ${{ steps.release.outputs.upload_url }}
-        upload-release-files: true
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
